update foto avatar 2

--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                             </div>
-                            <p>El teclado Braille ha hecho que mi experiencia escolar sea mucho más accesible y gratificante. Antes, me sentía frustrada al no poder acceder fácilmente a los materiales de estudio, pero ahora puedo leer y escribir en Braille con facilidad. Me siento más segura y motivada para aprender.</p>
+                            <p>Como alguien que se considera autodidacta, el teclado Braille ha sido una herramienta invaluable en mi búsqueda constante de aprendizaje y crecimiento personal. Me ha brindado la oportunidad de explorar un nuevo sistema de escritura de manera autónoma  permitiéndome estudiar y practicar a mi propio ritmo </p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center">
                             <img class="rounded-circle" src="./assets/images/avatar-2.png" alt="">
                             <div class="ms-3">
-                                <h5>Josselyn Jimenez</h5>
-                                <small>Estudiante  Bachiller</small>
+                                <h5>Edgardo Arzola</h5>
+                                <small>Area de Administracion</small>
                             </div>
                         </div>
                     </div>
